v3/crates/engine/tests/snapshots/relationship__common__rowsets_execute__remote_relationships__from_nested_user1.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": [
        {
          "staff": [
            {
              "favourite_artist_id": 1,
              "first_name": "Peter",
              "last_name": "Landin",
              "specialities": [
                "Computer Science",
                "Education"
              ]
            }
          ]
        },
        {
          "staff": [
            {
              "favourite_artist_id": 2,
              "first_name": "John",
              "last_name": "Hughes",
              "specialities": [
                "Computer Science",
                "Functional Programming",
                "Software Testing"
              ]
            },
            {
              "favourite_artist_id": 3,
              "first_name": "Koen",
              "last_name": "Claessen",
              "specialities": [
                "Computer Science",
                "Functional Programming",
                "Automated Reasoning"
              ]
            }
          ]
        },
        {
          "staff": null
        }
      ]
    }
  ]
}
